--- a/front/bakery.html
+++ b/front/bakery.html
@@ -108,7 +108,7 @@
         </section>
         <section class="sections" id="formats">
             <div class="container">
-                <h2 class="format-title titles main">Формати</h2>
+                <h2 class="format-title titles centered">Формати</h2>
                 <div class="formats-section">
                     <button class="slider-button" type="button">
                         <svg width="26" height="26">
